client/src/styles.css
/* You can add global styles to this file, and also import other style files */

/* Start operations style */

.inputMiddle {
  text-align: center;
}

.separator {
  border: none;
  height: 3px;
  background-color: black;
}

.button-signs {
  font-size: 1.5em;
}

.plusMinusButtons {
  padding-top: 0;
  padding-bottom: 0;
}

.input-group-btn {
  padding: 0;
  margin: 0;
}

/* Remove built in input increment/decrement */

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.box {
  margin-top: 5%;
  padding: 3%;
  background-color: #e9ecef;
}

.commentForm {
  margin-top: 5%;
}

.btn-flash {
  border: none;
  animation: glowing 1000ms infinite;
}
@keyframes glowing {
  0% { background-color: #007bff; box-shadow: 0 0 10px #007bff; }
  /*50% { background-color: #0094FF; box-shadow: 0 0 10px #0094FF; }*/
  100% { background-color: #007bff; box-shadow: 0 0 10px #007bff; }
}

/* End operations style */

/* Start finish batch style */

.btn-startBatch {
  margin-top: 40px;
}

.firstInput {
  margin-left: 83px;
  margin-right: 123px;
}

.finishBatchLabels {
  font-size: 120%;
}

.btn-finishBatch {
  margin-left: 600px;
  margin-top: 40px;
}

.yieldField {
  margin-top: 7%;
}

.finishBatch {
  margin-left: 36px;
}

/* End finish batch style */

/* Start comments style */

/* End comments style */

/* Start Navbar style */

/* End Navbar style */

.mycontent-left {
  border-right: 1px ridge #333;
}

.startBatchButton {
  right: 0%;
}

/*End Navbar style*/

/* Start start batch */

.selectProd {
  width: 100%;
}

/* End start batch */

.errorNotification {
  position: absolute;
  z-index: 1;
  top: 5px;
  line-height: 20px;
  text-align: center;
  right: 5px;
  background: linear-gradient(-90deg, #be3e3e, #d12b2b);
  color: white;
  /*font-style: oblique;*/
  text-transform: capitalize;
  border: solid;
  border-color: black;
  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
  min-height: 20px;
  min-width: 160px;
  max-width: 500px;
  padding: 15px;
  cursor: pointer;
}


/* Navbar */
.navbar-body {
  background-color: rgba(236, 240, 241, 0.904);
  border-right: groove;
  height: 100vh;
}

.batch-status-info {
  background-color: rgba(227, 233, 236, 0.904);
}

.bg-warning-light {
  background-color: rgba(230, 200, 70, 0.712)
}

.bg-success-light {
  background-color: rgba(65, 199, 65, 0.712)
}

/* Header */

#header {
  background-color: rgba(236, 240, 241, 0.904);
  border-bottom: groove;
  height: 8vh;
}

/* Collapse */

.collapse{
  pointer-events: none;
  cursor: default;
  text-decoration: none;
  color: black;
  display: block !important;
  max-height: 0 !important;
  opacity: 0;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  -webkit-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.collapse.show{
  max-height: 100% !important;
  opacity: 1;
}

